tests/ui/associated-types/issue-72806.stderr
error[E0271]: type mismatch resolving `<Foo2 as Bar2>::Ok == char`
  --> $DIR/issue-72806.rs:14:20
   |
LL |     type Sibling = Foo2;
   |                    ^^^^ type mismatch resolving `<Foo2 as Bar2>::Ok == char`
   |
note: expected this to be `char`
  --> $DIR/issue-72806.rs:18:15
   |
LL |     type Ok = u32;
   |               ^^^
note: required by a bound in `Bar::Sibling`
  --> $DIR/issue-72806.rs:3:24
   |
LL |     type Sibling: Bar2<Ok=char>;
   |                        ^^^^^^^ required by this bound in `Bar::Sibling`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
